# python-for-data-science

./: main.py  pyproject.toml
Module_01_Python_Fundamentals/: Module_01_Lab_01_Your_First_Steps_in_Python.ipynb  Module_01_Lab_02_Variables_and_Data_Types.ipynb  Module_01_Lab_03_Operators_and_Expressions.ipynb  Module_01_Lab_04_Control_Flow_If_Elif_Else.ipynb  Module_01_Lab_05_Loops_For_and_While.ipynb  Module_01_Lab_06_Functions.ipynb  Module_01_Lab_07_Strings_and_Formatting.ipynb  Module_01_Lab_08_Error_Handling.ipynb
Module_03_OOP/: Module_03_Lab_01_Classes_and_Objects.ipynb
Module_05_NumPy/: Module_05_NumPy_Numerical_Computing.ipynb
Module_06_Pandas/: Module_06_Pandas_Data_Wrangling.ipynb
Module_07_Visualisation/: Module_07_Data_Visualisation.ipynb
