[project]
name = "python-for-data-science"
version = "0.1.0"
description = "Note books for learning Data science"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "sns>=0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
